# hello_mipi

./: .clang-format  CMakeLists.txt  doxygen.cfg  mipi.kdev4
src/: crc.c  crc.h  crc16.c  crc16.h  main.c  main.cpp  mipi.h  test.c  test.cpp
